// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <PrimeraApp> Debe mostrar <PrimeraApp /> correctamente 1`] = `
<Fragment>
  <h1>
    Hola, soy Goku
    !!
  </h1>
  <p>
    soy un subtitulo
  </p>
</Fragment>
`;

exports[`Pruebas en <PrimeraApp> Debe mostrar el subtitulo enviado por props. 1`] = `
<Fragment>
  <h1>
    Hola, soy Goku
    !!
  </h1>
  <p>
    Hola, soy un subtitulo
  </p>
</Fragment>
`;
